Closed
Bug 230209
Opened 22 years ago
Closed 22 years ago
Infinite loop in DRefTool because error condition was dropped on floor
Categories
(Core Graveyard :: Tracking, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: timeless, Assigned: timeless)
Details
Attachments
(1 file)
|
612 bytes,
patch
|
bzbarsky
:
review+
|
Details | Diff | Splinter Review |
Steps:
wake up and realize that boffo hasn't posted to tinderbox
attach to boffo
attach to dreftool
determine [p ((nsLocalFile*)aFilename)->mPath] that it's analyzing
/mnt/ibm/mozhack/mozilla/uriloader/exthandler/os2/nsOSHelperAppService.cpp
walk through the stack and notice that it ignored the return.
To reproduce:
./run-mozilla.sh /mnt/ibm/mozhack/obj-i686-pc-linux-gnu-qt/dist/bin/dreftool -D
/mnt/ibm/mozhack/mozilla/uriloader/exthandler/os2/nsOSHelperAppService.cpp -e
/mnt/ibm/mozhack/obj-i686-pc-linux-gnu-qt/dist/bin/nullcall.lst -f
/mnt/ibm/mozhack/obj-i686-pc-linux-gnu-qt/dist/bin/nullfunc.lst
Attachment #138487 -
Flags: review?(dwitte)
Attachment #138487 -
Flags: superreview?(bz-vacation)
Comment 2•22 years ago
|
||
Comment on attachment 138487 [details] [diff] [review]
Handle return from readUntil
r=bzbarsky, but wouldn't !done be better than false==done?
Attachment #138487 -
Flags: superreview?(bz-vacation)
Attachment #138487 -
Flags: review?(dwitte)
Attachment #138487 -
Flags: review+
checked in
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Updated•9 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•