Bug 230209 Infinite loop in DRefTool because error condition was dropped on floor r=bz